--- a/app/src/main/res/layout/story_list_item_layout.xml
+++ b/app/src/main/res/layout/story_list_item_layout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<FrameLayout
     android:id="@+id/feed_list_item_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
@@ -11,17 +11,26 @@
         android:id="@+id/story_list_item_text_view_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center_vertical"/>
+        android:text="Title"
+        android:layout_gravity="center_vertical"/>
 
     <TextView
         android:id="@+id/story_list_item_text_view_publish_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center_vertical"/>
+        android:text="Publish Date"
+        android:layout_gravity="bottom|end"/>
+
+    <TextView
+        android:id="@+id/story_list_item_text_view_author"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Author"
+        android:layout_gravity="start|bottom"/>
 
     <ImageView
         android:id="@+id/story_list_item_image_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-</LinearLayout>
+</FrameLayout>
