--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
+            app:expandedTitleMarginStart="@dimen/collapsing_toolbar_expanded_title_margin_start"
+            app:expandedTitleMarginEnd="@dimen/collapsing_toolbar_expanded_title_margin_end"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <android.support.v7.widget.Toolbar
