--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,12 +3,14 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="app_bar_elevation">4dp</dimen>
+    <dimen name="collapsing_toolbar_expanded_title_margin_start">24dp</dimen>
+    <dimen name="collapsing_toolbar_expanded_title_margin_end">64dp</dimen>
 
     <!-- Feed List -->
     <dimen name="feed_list_item_height">80dp</dimen>
 
     <!-- Story List -->
-    <dimen name="story_list_item_height">80dp</dimen>
+    <dimen name="story_list_item_height">70dp</dimen>
     <integer name="num_chars_published_date">16</integer>
 
     <!-- AppBar Dimensions -->
@@ -17,10 +19,23 @@
     <!-- Text sizes -->
     <dimen name="news_title_item_text_size">20sp</dimen>
     <dimen name="news_authors_item_text_size">12sp</dimen>
+    <dimen name="news_published_date_item_text_size">12sp</dimen>
 
     <!-- Text Margins -->
-    <dimen name="news_title_item_margin">8dp</dimen>
-    <dimen name="news_authors_item_margin">4dp</dimen>
+    <dimen name="news_title_item_horizontal_margin">24dp</dimen>
+    <dimen name="news_title_item_vertical_margin">8dp</dimen>
+    <dimen name="news_authors_item_horizontal_margin">24dp</dimen>
+    <dimen name="news_authors_item_vertical_margin">8dp</dimen>
+    <dimen name="news_published_date_horizontal_item_margin">24dp</dimen>
+    <dimen name="news_published_date_vertical_item_margin">8dp</dimen>
+
+    <!-- Text lines -->
+    <integer name="news_title_item_max_lines">2</integer>
+    <integer name="news_title_item_max_length">100</integer>
+    <integer name="news_authors_item_max_lines">1</integer>
+    <integer name="news_authors_item_max_length">40</integer>
+    <integer name="news_published_date_item_max_lines">1</integer>
+    <integer name="news_published_date_item_max_length">16</integer>
 
     <!-- Http connection values -->
     <integer name="http_read_timeout">10000</integer>
